// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/EmailForm render() should not show inline notice when content is not passed in 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should not show inline notice when form is not expanded 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when avatars are passed in 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <CollaboratorAvatars
    containerAttributes={{}}
    maxAdditionalCollaboratorsNum={99}
    maxDisplayedUserAvatars={3}
  />
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when contacts field is disabled 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="bottom-center"
    text="You do not have permission to invite collaborators."
    theme="default"
  >
    <div
      className="tooltip-target"
    >
      <Tooltip
        className="usm-ftux-tooltip"
        constrainToScrollParent={false}
        constrainToWindow={true}
        isDisabled={false}
        isShown={true}
        position="middle-right"
        showCloseButton={true}
        targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        text={
          <FormattedMessage
            defaultMessage="Share this item with coworkers by entering their email addresses"
            id="boxui.unifiedShare.enterEmailAddressesCalloutText"
          />
        }
        theme="callout"
      >
        <ContactsField
          disabled={true}
          error=""
          fieldRef={
            {
              "current": null,
            }
          }
          getContacts={[MockFunction]}
          getPillClassName={[Function]}
          onContactAdd={[Function]}
          onContactRemove={[Function]}
          onInput={[Function]}
          selectedContacts={[]}
          showContactAvatars={true}
          tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
          validateForError={[Function]}
          validator={[Function]}
        />
      </Tooltip>
    </div>
  </Tooltip>
  <TextArea
    data-testid="be-emailform-message"
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    placeholder="boxui.share.messageSelectorPlaceholder"
    rows={3}
    tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
    value=""
  />
  <ModalActions>
    <Button
      className=""
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={false}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when expanded 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    data-testid="be-emailform-message"
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    placeholder="boxui.share.messageSelectorPlaceholder"
    rows={3}
    tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
    value=""
  />
  <ModalActions>
    <Button
      className=""
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={false}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when not expanded 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component when there is an error 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <InlineNotice
    type="error"
  >
    Error submitting form
  </InlineNotice>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    data-testid="be-emailform-message"
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    placeholder="boxui.share.messageSelectorPlaceholder"
    rows={3}
    tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
    value=""
  />
  <ModalActions>
    <Button
      className=""
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={false}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component with inline notice 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <InlineNotice
    type="error"
  >
    Oops, there was an error.
  </InlineNotice>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    data-testid="be-emailform-message"
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    placeholder="boxui.share.messageSelectorPlaceholder"
    rows={3}
    tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
    value=""
  />
  <ModalActions>
    <Button
      className=""
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={false}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render default component with secruity indicator notes when expanded and has external users selected 1`] = `
<form
  className="is-expanded"
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
  <TextArea
    data-testid="be-emailform-message"
    label={
      <FormattedMessage
        defaultMessage="Message"
        id="boxui.unifiedShare.message"
      />
    }
    onChange={[Function]}
    placeholder="boxui.share.messageSelectorPlaceholder"
    rows={3}
    tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
    value=""
  />
  <div
    className="security-indicator-note"
  >
    <span
      className="security-indicator-icon-globe"
    >
      <IconGlobe
        height={12}
        width={12}
      />
    </span>
    <FormattedMessage
      defaultMessage="This content will be shared with external collaborators."
      id="boxui.unifiedShare.contentSharedWithExternalCollaborators"
    />
  </div>
  <ModalActions>
    <Button
      className=""
      isDisabled={false}
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="boxui.core.cancel"
      />
    </Button>
    <PrimaryButton
      isDisabled={false}
      isLoading={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="Send"
        id="boxui.core.send"
      />
    </PrimaryButton>
  </ModalActions>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render tooltip around EmailForm correctly if recommendedSharingTooltipCalloutName is a string 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-left"
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Based on your usage, we think {fullName} would be interested in this file."
          id="boxui.unifiedShare.recommendedSharingTooltipCalloutText"
          values={
            {
              "fullName": "Foo Bar",
            }
          }
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render tooltip around EmailForm correctly if recommendedSharingTooltipCalloutName is not passed in 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render tooltip around EmailForm correctly if recommendedSharingTooltipCalloutName is null or undefined 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;

exports[`features/unified-share-modal/EmailForm render() should render tooltip around EmailForm correctly if recommendedSharingTooltipCalloutName is null or undefined 2`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="tooltip-target"
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-right"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
      text={
        <FormattedMessage
          defaultMessage="Share this item with coworkers by entering their email addresses"
          id="boxui.unifiedShare.enterEmailAddressesCalloutText"
        />
      }
      theme="callout"
    >
      <ContactsField
        disabled={false}
        error=""
        fieldRef={
          {
            "current": null,
          }
        }
        getContacts={[MockFunction]}
        getPillClassName={[Function]}
        onContactAdd={[Function]}
        onContactRemove={[Function]}
        onInput={[Function]}
        selectedContacts={[]}
        showContactAvatars={true}
        tooltipWrapperClassName="bdl-UnifiedShareModal-tooltipWrapper"
        validateForError={[Function]}
        validator={[Function]}
      />
    </Tooltip>
  </div>
</form>
`;
